packages/static_ecs/tests/compile_fail/build_options.zig
pub const single_threaded = false;
pub const enable_os_backends = false;
pub const enable_tracing = false;
pub const static_package = "static_ecs_compile_fail";
